force-app/main/default/objects/Campaign/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Flat Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Whether Discount_Value__c on this Campaign is a percentage off or a flat rupee amount off. Only meaningful for Campaigns used as discount campaigns (see the Feature Expansion Plan §1) — not every Campaign in the org needs this set.</description>
</CustomField>