force-app/main/default/objects/Campaign/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>e.g. 10 for 10% when Discount_Type__c is Percentage, or 500 for a flat ₹500 off when Discount_Type__c is Flat Amount.</description>
</CustomField>