force-app/main/default/objects/Campaign/fields/Eligible_Category__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Category__c</fullName>
    <label>Eligible Category</label>
    <length>80</length>
    <type>Text</type>
    <description>Restricts this discount campaign to cart lines whose Product2.Family matches this value exactly (e.g. "Laptop") — those items get the discount, everything else in the cart does not, though it can still count toward Minimum_Order_Value__c. Blank means the discount applies to the whole eligible cart, same as before this field existed. See Feature Expansion Plan §1.2 and the discount system's worked example (laptop discounted, accessories not).</description>
</CustomField>