force-app/main/default/objects/Campaign/fields/Maximum_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount_Amount__c</fullName>
    <label>Maximum Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Caps how much a Percentage discount can knock off in rupees (e.g. 10% off, capped at ₹5,000). Blank means uncapped. Ignored for a Flat Amount discount, which is already a fixed rupee figure. See Feature Expansion Plan §1.2/§1.3.</description>
</CustomField>