force-app/main/default/objects/Campaign/fields/Minimum_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Value__c</fullName>
    <label>Minimum Order Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Cart subtotal must reach at least this amount for a coupon on this Campaign to be valid. Blank means no minimum. Only meaningful for Campaigns used as discount campaigns. See Feature Expansion Plan §1.2/§1.3.</description>
</CustomField>